--- a/index.html
+++ b/index.html
@@ -5,9 +5,81 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odin Landing Page</title>
+  <link rel="stylesheet" href="./fonts.css">
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  Hello Landing Page
+  <header>
+    <div class="header container">
+      <div class="header-logo">Header Logo</div>
+      <nav>
+        <ul class="header-links">
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <div class="dark">
+      <div class="container hero">
+        <div class="hero-left">
+          <h1>This website is awesome</h1>
+          <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+          <button class="btn btn-primary">Sign up</button>
+        </div>
+        <div class="hero-right">
+          <img src="https://picsum.photos/500/300" alt="random image from picsum.photos" class="hero-image">
+        </div>
+      </div>
+    </div>
+    <div class="light">
+      <div class="info container">
+        <h2>Some random information</h2>
+        <ul class="info-cards">
+          <li class="info-card">
+            <div class="info-box"></div>
+            <div class="info-text">this is some subtext under an illustration or image</div>
+          </li>
+          <li class="info-card">
+            <div class="info-box"></div>
+            <div class="info-text">this is some subtext under an illustration or image</div>
+          </li>
+          <li class="info-card">
+            <div class="info-box"></div>
+            <div class="info-text">this is some subtext under an illustration or image</div>
+          </li>
+          <li class="info-card">
+            <div class="info-box"></div>
+            <div class="info-text">this is some subtext under an illustration or image</div>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+    <div class="gray">
+      <figure class="container quote">
+        <blockquote cite="https://www.huxley.net/bnw/four.html">
+          <p>Words can be like X-rays, if you use them properly—they’ll go through anything. You read and you’re pierced.</p>
+        </blockquote>
+        <figcaption>—Aldous Huxley, <cite>Brave New World</cite></figcaption>
+    </figure>
+    </div>
+    <div class="light">
+      <div class="container cta">
+        <div class="cta-left">
+          <h2>Call to action! It's time!</h2>
+          <div>Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <div class="cta-right">
+          <button class="btn btn-primary btn-border">Sign up</button>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer>
+    Copyright © The Odin Project 2022
+  </footer>
 </body>
 </html>
